--- a/conjure-cli-spark/pom.xml
+++ b/conjure-cli-spark/pom.xml
@@ -375,6 +375,12 @@
 					<artifactId>maven-surefire-report-plugin</artifactId>
 					<version>2.20</version>
 				</plugin>
+				<plugin>
+					<groupId>org.scalatest</groupId>
+					<artifactId>scalatest-maven-plugin</artifactId>
+					<version>2.0.2</version>
+				</plugin>
+
 				<!-- <plugin> -->
 				<!-- <groupId>org.scalatest</groupId> -->
 				<!-- <artifactId>scalatest-maven-plugin</artifactId> -->
