--- a/conjure-datasources/pom.xml
+++ b/conjure-datasources/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.conjure</groupId>
 		<artifactId>conjure-parent</artifactId>
-		<version>5.0.0-1-SNAPSHOT</version>
+		<version>5.0.0-1</version>
 	</parent>
 
 	<dependencies>
